# libfcgicpp

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Client.cpp  Client.hpp  Connection.cpp  Connection.hpp  Header.cpp  Header.hpp  README  Spec.hpp  Util.hpp  fcgi_client  index.cpp
_CPack_Packages/Linux/DEB/: libfcgicpp_0.1.1-0_amd64.deb
_CPack_Packages/Linux/DEB/libfcgicpp_0.1.1-0_amd64/: control  md5sums
include/: Connection.hpp  Head.hpp  IOServicePool.hpp  Manager.hpp  Request.hpp  Spec.hpp  Thread.hpp  Util.hpp
include/body/: BeginRequest.hpp  Body.hpp  EndRequest.hpp  Padding.hpp  Params.hpp  Stdin.hpp  Unknown.hpp
include/role/: Authorizer.hpp  Filter.hpp  Responder.hpp  Role.hpp
nbproject/: Makefile-Default.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Default.bash  Package-Default.bash.orig  configurations.xml  configurations.xml.orig  project.xml
src/: Connection.cpp  Head.cpp  Header.cpp  IOServicePool.cpp  Manager.cpp  Request.cpp  Thread.cpp
src/body/: BeginRequest.cpp  EndRequest.cpp  Padding.cpp  Params.cpp  Stdin.cpp  Unknown.cpp
src/fcgi/: Connection.cpp  Connection.hpp  Header.cpp  Header.hpp  Spec.hpp  Util.hpp
src/fcgi/body/: BeginRequest.cpp  BeginRequest.hpp  EndRequest.cpp  EndRequest.hpp  Params.cpp  RequestBody.hpp  Unknown.cpp  Unknown.hpp
src/test/: Client.cpp  Client.hpp  index.cpp
test/: Client.cpp  Client.hpp  index.cpp
